# sonic_sservice

./: Procfile  docker-compose.yml  pyproject.toml  requirements.txt
sqladmin_poc/: app.py  database.py  settings.py
