[tool.poetry]
name = "sqladmin-poc"
version = "0.1.0"
description = ""
authors = ["Antoine Lafouasse <antoine.lafouasse@backmarket.com>"]
readme = "README.md"
packages = [{include = "sqladmin_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
